--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                   <div class="icon">
                     <i class="fa-solid fa-film"></i>
                   </div>
-                  <div class="topic">Netflix Clone</div>
+                  <div class="topic">Instagram Clone</div>
                   <p class="txt2">
-                    It is an Exact replica of the Netflix Website , designed using HTML & CSS. 
+                    It is an Exact replica of the Instagram Website , designed using HTML & CSS. 
                   </p>
                   <div class="box-icon">
-                    <a href="https://remarkable-jalebi-91bfa1.netlify.app/" target="_blank"><i class="fab fa-chrome"></i></a>
-                    <a href="https://github.com/ROHANSAMUEL134/Netflix-Clone" target="_blank"><i
+                    <a href="https://dynamic-babka-02236d.netlify.app/" target="_blank"><i class="fab fa-chrome"></i></a>
+                    <a href="https://github.com/22Monesh22/Instagram-clone.git" target="_blank"><i
                         class="fab fa-github"></i></a>
                   </div>
                   </div>
@@ -118,8 +118,8 @@
                     It is my Personal Portfolio Website , developed using HTML, CSS & Javascript.
                   </p>
                   <div class="box-icon">
-                    <a href="https://rohan-samuel-portfolio.netlify.app/" target="_blank"><i class="fab fa-chrome"></i></a>
-                    <a href="https://github.com/ROHANSAMUEL134/Responsive-Portfolio" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://loquacious-sopapillas-4a7292.netlify.app/" target="_blank"><i class="fab fa-chrome"></i></a>
+                    <a href="https://github.com/22Monesh22/Responsive_portfolio.git" target="_blank"><i class="fab fa-github"></i></a>
                   </div>
                 </div>
 
@@ -132,8 +132,8 @@
                      Developed an amazing Weather Forecasting Application, developed using HTML,CSS & Javascript.
                   </p>
                   <div class="box-icon">
-                    <a href="https://deluxe-truffle-b58f09.netlify.app/" target="_blank"><i class="fab fa-chrome"></i></a>
-                    <a href="https://github.com/ROHANSAMUEL134/Weather-Application" target="_blank">
+                    <a href="https://brilliant-taiyaki-b83a27.netlify.app/" target="_blank"><i class="fab fa-chrome"></i></a>
+                    <a href="https://github.com/22Monesh22/weather_application.git" target="_blank">
                       <i class="fab fa-github"></i></a>
                   </div>
                 </div>
@@ -147,8 +147,8 @@
                     Amazing Web Calculator designed using HTML, CSS & Javascript.
                   </p>
                   <div class="box-icon">
-                    <a href="https://musical-kitten-c7a617.netlify.app/" target="_blank"><i class="fab fa-chrome"></i></a>
-                    <a href="https://github.com/ROHANSAMUEL134/Calculator" target="_blank"><i
+                    <a href="https://glowing-wisp-ee48ba.netlify.app/" target="_blank"><i class="fab fa-chrome"></i></a>
+                    <a href="https://github.com/22Monesh22/calculator.git" target="_blank"><i
                         class="fab fa-github"></i></a>
                   </div>
                 </div>
@@ -164,7 +164,7 @@
                   </p>
                   <div class="box-icon">
                     
-                    <a href="https://github.com/ROHANSAMUEL134/Alarm-Clock" target="_blank">
+                    <a href="https://github.com/22Monesh22/Alarm.git" target="_blank">
                       <i class="fab fa-github"></i></a>
                   </div>
                 </div>
@@ -178,7 +178,7 @@
                     Chatbot developed using Python by integating the API key using openai module.
                   </p>
                   <div class="box-icon">
-                    <a href="https://github.com/ROHANSAMUEL134/Chatgpt" target="_blank">
+                    <a href="https://github.com/22Monesh22/chatbot.git" target="_blank">
                       <i class="fab fa-github"></i></a>
                   </div>
                 </div>
@@ -194,7 +194,7 @@
                    this uses various datasets and openai module to achieve detection of mood.
                   </p>
                   <div class="box-icon">
-                    <a href="https://github.com/ROHANSAMUEL134/Song-Recommendation" target="_blank">
+                    <a href="https://github.com/22Monesh22/song_recommendation.git" target="_blank">
                       <i class="fab fa-github"></i></a>
                   </div>
                 </div>
@@ -209,7 +209,7 @@
                     it is used to fill forms like Google forms spontaneously, by using Selenium library.
                   </p>
                   <div class="box-icon">
-                    <a href="https://github.com/ROHANSAMUEL134/Automation"
+                    <a href="https://github.com/22Monesh22/automata.git"
                       target="_blank"><i class="fab fa-github"></i></a>
                   </div>
                 </div>
@@ -219,7 +219,7 @@
         </section>
         <div class="res">
         <section id="resume">
-            <a href="resume.png" download="resume.png">
+            <a href="resume.pdf" download="resume.pdf">
                 <button>View Resume</button><br><br>
             </a>
         </section>
@@ -236,18 +236,18 @@
                 Thank you for visiting my portfolio. If you would like to get in touch, you can reach me at :
             </p>
             <div class="media-icons">
-                <a href="mailto:rohansamuel134@gmail.com" target="_blank" rel="noopener noreferrer">
+                <a href="mailto:22monesh@gmail.com" target="_blank" rel="noopener noreferrer">
                     <i class="fas fa-envelope"></i>
                   </a>
-                <a href="https://www.linkedin.com/in/rohan-samuel-4a096a226" target="_blank">
+                <a href="https://www.linkedin.com/in/monesh-kumar-c-860768254/" target="_blank">
                   <i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/ROHANSAMUEL134" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/22monesh22" target="_blank"><i class="fab fa-github"></i></a>
               </div>
         </section>
     </main><br><br>
 
     <footer>
-        <p class="foot">&copy; 2023 ROHAN SAMUEL. All rights reserved. </p>
+        <p class="foot">&copy; 2023 MONESH KUMAR. All rights reserved. </p>
     </footer>
 </body>
 </html>
